--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  background: #fafafa;
+}
+
 .box-shadow {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
