--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
